testdata/baselines/reference/submodule/conformance/jsDeclarationsCrossfileMerge.errors.txt
index.js(3,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
index.js(3,1): error TS2309: An export assignment cannot be used in a module with other exported elements.
index.js(4,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.


==== index.js (3 errors) ====
    const m = require("./exporter");
    
    module.exports = m.default;
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    ~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2309: An export assignment cannot be used in a module with other exported elements.
    module.exports.memberName = "thing";
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    
==== exporter.js (0 errors) ====
    function validate() {}
    
    export default validate;
    